# sinc-orchestrator

./: .env.example  .gitignore  COMPETITIVE_ANALYSIS.md  PITCH.md  QUICK_START.md  README.md  STRATEGIC_ROADMAP.md  analysis_orchestrator_core.md  apply_brutal_fixes.py  apply_brutal_fixes_v2.py  apply_brutal_fixes_v3.py  apply_brutal_fixes_v4.py  apply_brutal_fixes_v5.py  apply_cognitive_fixes.py  apply_fixes.py  apply_gds_fixes.py  apply_mcts_fixes.py  cleanup-wrapper.ps1  cleanup_runner.py  diag.ps1  fix_reputation_final.py  fix_reputation_truncation.py  global_syntax_check.py  orchestrator.ps1  pytest.ini  setup_intelligence_storage.py  test_path.ps1  test_sdk_verify.py  tmp_diff_scripts.py  tmp_orch_scripts.txt  tmp_parse_check.ps1  tmp_ps7_check.ps1  tmp_root_scripts.txt  tmp_test_wb.json
.claude/: settings.local.json
.codebuddy/: codebase_analysis.db  vector_store.db
ai-orchestrator/: .dockerignore  ARCHITECTURE_DECISIONS.md  README.md  ROADMAP.md  RUNBOOK.md  audit_sinc.py  check_env.py  debug_tasks_bootstrap.py  debug_tasks_fields.py  debug_tasks_isolated.py  debug_tasks_routes.py  run_global_analysis.py  test_db_yield.py  test_nivel6.py  verify_data_lineage.py  verify_deep_cognitive_v2.py  verify_global_connectivity.py  verify_gohorse_intelligence.py  verify_polyglot_hub.py  verify_self_healing.py  verify_universal_knowledge.py  verify_xref_depth.py
analysis/: dependency_graph.json
docs/: ONBOARDING.md
sinc/: ENTROPY_MODEL.md  pyproject.toml
sinc/sinc/: __init__.py  cli.py
sinc/sinc/output/: formatter.py
sinc/sinc/repo/: clone.py
(+5773 files in other folders)
