[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sinc"
version = "0.1.0"
description = "Software Architecture Intelligence — detect architecture decay in any codebase"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["architecture", "entropy", "static-analysis", "devtools", "software-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.urls]
Homepage   = "https://github.com/sinc-ai/sinc"
Repository = "https://github.com/sinc-ai/sinc"

[project.scripts]
sinc = "sinc.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["sinc*"]
